cmake_minimum_required(VERSION 3.21)
project(proiect_sda_314)

set(CMAKE_CXX_STANDARD 14)

add_executable(proiect_sda_314 main.cpp User.cpp User.h Friendship.cpp Friendship.h Message.h Message.cpp Array.h ABCNode.h OrderedSet.h  Repository.h Repository.cpp Service.h Service.cpp UserInterface.h UserInterface.cpp)
